# byteir

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .prettierrc.json  CITATION.cff  CNAME  Dockerfile  LICENSE  NOTICE  README-ja_jp.md  README-zh_cn.md  README.md  _typos.toml  ccl.mlir  config.toml  docker-compose.yaml  package-lock.json  package.json  vercel.json
compiler/lib/Conversion/: CMakeLists.txt  PassDetail.h
compiler/lib/Conversion/Common/: CMakeLists.txt  FunctionSupport.cpp
compiler/lib/Conversion/FuncToByre/: CMakeLists.txt  FuncToByre.cpp
compiler/lib/Conversion/GPUToNVVM/: CMakeLists.txt  GPUToNVVM.cpp
compiler/lib/Conversion/HloToByreTensor/: CMakeLists.txt  HloToByreCustom.cpp  HloToByreTensor.cpp
compiler/lib/Conversion/HloToCat/: CMakeLists.txt  ConvertHloToCat.cpp  FuseHloToCat.cpp  FuseHloToCatPattern.td  HloToCat.cpp  Utils.h
compiler/lib/Conversion/HloToLHlo/: CMakeLists.txt  HloToLHlo.cpp
compiler/lib/Conversion/HloToLinalg/: CMakeLists.txt  HloFusionToLinalg.cpp  UnrealizedCastToLinalg.cpp
compiler/lib/Conversion/HloToTensor/: CMakeLists.txt  ConvertHloToTensor.cpp
compiler/lib/Conversion/LcclToByre/: CMakeLists.txt  LcclToByre.cpp
compiler/lib/Conversion/LmhloToLace/: CMakeLists.txt  LmhloToLace.cpp
compiler/lib/Conversion/LmhloToMemref/: CMakeLists.txt  LmhloToMemref.cpp
compiler/lib/Conversion/MemrefToByre/: CMakeLists.txt  MemrefToByre.cpp
compiler/lib/Conversion/ToAIT/: CMakeLists.txt  GenAITConfig.cpp
compiler/lib/Conversion/ToAce/: CMakeLists.txt  MhloToAce.cpp  MhloToAceActivationPattern.td
compiler/lib/Conversion/ToByre/: CMakeLists.txt  Common.cpp  ToByre.cpp
compiler/lib/Conversion/ToGPU/: CMakeLists.txt  CoalescedForToGPU.cpp  FuncToGPU.cpp  Utils.cpp
compiler/lib/Conversion/ToHlo/: ArithToMhlo.cpp  ArithToMhloPattern.td  CMakeLists.txt
compiler/lib/Conversion/ToLLVM/: CMakeLists.txt  CollectFuncToLLVM.cpp  GenLLVMConfig.cpp
compiler/lib/Conversion/ToLinalg/: CMakeLists.txt  HloFusionToLinalg.cpp  HloToLinalg.cpp  LinalgExtToLinalg.cpp  MemrefCopyToLinalg.cpp  TensorToLinalg.cpp  UnrealizedCastToLinalg.cpp
compiler/lib/Conversion/ToPTX/: CMakeLists.txt  (+2 more)
compiler/lib/Dialect/: CMakeLists.txt
compiler/lib/Pipelines/: AffineOpt.cpp  AllOpt.cpp  BufferizeOpt.cpp  ByreHost.cpp  ByreOpt.cpp  ByreTensorOpt.cpp  CMakeLists.txt  CatFusionOpt.cpp  CatOpt.cpp  CatPreprocess.cpp  HloFusionOpt.cpp  HloGraphOpt.cpp  HloOpt.cpp  LinalgMemrefOpt.cpp  LinalgTensorOpt.cpp  SCFOpt.cpp  ShapeOpt.cpp  VectorOpt.cpp
compiler/python/: ByteIRModules.cpp  CMakeLists.txt  gen_version.py  setup.py  version.txt
compiler/python/byteir/: README.md  __init__.py  _backend_registry.py  _byteir_registry.py  compile.py  pattern_matches.py  registry.py  utils.py
compiler/python/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
compiler/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
compiler/test/Analysis/: testPrintArgSideEffect.mlir  testPrintLiveness.mlir  testPrintShapeAnalysis.mlir  testPrintSymbolicShape.mlir  testPrintUseRange.mlir
compiler/test/CPURunner/: gelu.mlir  repeatCustomCall.mlir  scatterTiling.mlir
compiler/test/Ops/: conv.mlir  dot.mlir
compiler/test/Stat/: allocCnt.mlir  opCnt.mlir  opTypes.mlir
compiler/test/Transforms/: boundedShapeInference.mlir  bufferReuse.mlir  canonicalizeExt.mlir  cmae.mlir  collectFunc.mlir  funTag.mlir  genericDeviceConfig.mlir  gereicDeviceConfig_with_ByreOpt.mlir  graphCanonicalize.mlir  graphClusteringByDevice.mlir  graphClusteringByDeviceBottomUp.mlir  graphClusteringByDeviceGreedy.mlir  graphClusteringByDeviceTopDown.mlir  horizontalFusion.mlir  insertUniqueId.mlir  insertUniqueIdErase.mlir  loopTag.mlir  loopUnrollImperfect.mlir  loopUnrollUseAnchor.mlir  loopUnrollUseDepth.mlir  loopUnrollWithAnnotation.mlir  memoryPlanning.mlir  oneShotBufferize.mlir  oneShotBufferizeOutParams.mlir  removeFunTag.mlir  removeFuncBody.mlir  rewriteOpToStdCall.mlir  setAllSpace.mlir  setArgShape.mlir  setArgSpace.mlir  setArgSpaceAutoDeduce.mlir  setOpAndArgSpace.mlir  setOpSpace.mlir  shapeFuncOutlining.mlir  shapeReification.mlir  staticShapeInference.mlir  testGraphClusteringByDeviceOpNum.mlir
compiler/test/Utils/: testMergeTwoModulesCase0.mlir  testMergeTwoModulesCase0_1.mlir  testMergeTwoModulesCase1.mlir  testMergeTwoModulesCase1_1.mlir  testMergeTwoModulesCase2.mlir  testMergeTwoModulesCase2_1.mlir
compiler/test/lib/: CMakeLists.txt
compiler/tools/byteir-cpu-runner/: CMakeLists.txt  byteir-cpu-runner.cpp
compiler/tools/byteir-opt/: CMakeLists.txt  byteir-opt.cpp
compiler/tools/byteir-stat/: CMakeLists.txt  byteir-stat.cpp
compiler/tools/byteir-translate/: CMakeLists.txt  byteir-translate.cpp
external_libs/runtime/: CMakeLists.txt  README.md
frontends/onnx-frontend/: .gitignore  CMakeLists.txt  MLIR.cmake  README.md  requirements.txt
frontends/onnx-frontend/scripts/: build_and_test.sh  envsetup.sh
frontends/onnx-frontend/test/: base.py  env.py
frontends/torch-frontend/: .gitignore  CMakeLists.txt  MLIR.cmake  README.md  TorchMLIR.cmake  build-requirements.txt  requirements.txt  test-requirements.txt  torch-cpu-requirements.txt  torch-cuda-requirements.txt  torch-requirements.txt
frontends/torch-frontend/doc/: torch_2_0_training.md
frontends/torch-frontend/examples/: train_tinybert.py
frontends/torch-frontend/scripts/: build.sh  build_and_test.sh  envsetup.sh  prepare.sh
frontends/torch-frontend/torch-frontend/: CMakeLists.txt
runtime/cmake/: CMakeLists.txt  brt_common.cmake  brt_config.h.in  brt_device_cpu.cmake  brt_device_cuda.cmake  brt_device_hbm.cmake  brt_device_hbmpim.cmake  brt_device_nccl.cmake  brt_device_upmem.cmake  brt_framework.cmake  brt_ir.cmake  brt_provider_cpu.cmake  brt_provider_cuda.cmake  brt_provider_hbm.cmake  brt_provider_hbmpim.cmake  brt_provider_nccl.cmake  brt_provider_upmem.cmake  brt_python_bindings.cmake  brt_session.cmake  brt_shared.cmake  brt_unittests.cmake
runtime/cmake/Modules/: FindNCCL.cmake  Findnccl.cmake
runtime/examples/external_project/: CMakeLists.txt  main.cpp
(+2494 files in other folders)
