add_subdirectory(Common)
add_subdirectory(FuncToByre)
add_subdirectory(GPUToNVVM)
add_subdirectory(HloToByreTensor)
add_subdirectory(HloToCat)
add_subdirectory(HloToLHlo)
add_subdirectory(LmhloToLace)
add_subdirectory(LmhloToMemref)
add_subdirectory(MemrefToByre)
add_subdirectory(ToAce)
add_subdirectory(ToAIT)
add_subdirectory(ToByre)
add_subdirectory(ToGPU)
add_subdirectory(ToHlo)
add_subdirectory(ToLinalg)
add_subdirectory(ToLLVM)
add_subdirectory(ToPTX)
