add_subdirectory(Ace)
add_subdirectory(Affine)
add_subdirectory(Byre)
add_subdirectory(Cat)
add_subdirectory(Ccl)
add_subdirectory(Lace)
add_subdirectory(Linalg)
add_subdirectory(MemRef)
add_subdirectory(mhlo)
add_subdirectory(SCF)
add_subdirectory(Shape)
add_subdirectory(Tensor)
add_subdirectory(Transform)
add_subdirectory(Vector)
